test/integration/bad/new/bad_constrained_type_in_local2.stan
transformed data {
  cholesky_factor_corr[2] x;
  {
    cholesky_factor_corr[2] y = x;
    print(y);
  }
}
